Fixed navbar spacing and product list container

--- a/client/src/components/styles.module.scss
+++ b/client/src/components/styles.module.scss
@@ -3,9 +3,9 @@
   margin-top: 100px;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(5, 0fr);
-  grid-row-gap: 30px;
-  grid-column-gap: 45px;
+  grid-template-columns: repeat(4, 0fr);
+  grid-row-gap: 5%;
+  grid-column-gap: 5%;
   justify-items: center;
   justify-content: center;
 
@@ -47,13 +47,13 @@
     }
 
     button {
-      border: none;
       border-radius: 10px;
       padding: 5px 10px;
       cursor: pointer;
       font-size: 14px;
       background-color: #12664f;
       color: #fff;
+      box-shadow: 0 0 2px 3px rgba(0, 0, 0, 0.2);
     }
 
     button:hover {
