--- a/client/src/layout/styles.module.scss
+++ b/client/src/layout/styles.module.scss
@@ -19,7 +19,6 @@ nav {
   align-items: center;
   justify-content: center;
   font-family: "Lato", sans-serif;
-  //background-color: #ececec;
 
   .navBar {
     width: 100%;
@@ -37,13 +36,14 @@ nav {
     font-size: 30px;
     font-weight: bold;
     margin: 0;
+    flex: 1;
   }
 
   .navButtons {
-    width: 35%;
+    flex: 1;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
 
     a {
